--- a/html/_/pre_index.html
+++ b/html/_/pre_index.html
@@ -1405,7 +1405,7 @@ crossorigin=""/>
             <td><span></span>11</td>
             <td><span></span>Produits sans contact avec la peau (désodorisants, blocs pour toilette, insecticides, baton d'encens, objets en plastique, bougies, essence, peinture, cire pour le sol, produits pour lave-vaisselle, parfums de linge, sachets parfumants, cirage, litiaires, sprays pour animaux, soins textiles, eaux parfumantes pour repassage)</td> 
         </tr>
-</table>
+  </table>
 </div>
 <br>
     <p class="mt-5" lang="fr">Une partie du travail de l’association est également d’interdire l’utilisation d’ingrédients dangereux pour le consommateur. Ne pouvant donc pas les insérer dans notre classification, nous vous présentons la liste de ces substances ci-dessous : </p>
@@ -1414,21 +1414,21 @@ crossorigin=""/>
 <div class="table-responsive-sm table-striped col-12">
 <table class="col-12 align-items-center" style="width:100%">
   <caption class="caption"><span lang="fr">Liste des produits interdits d'utilisation par l'IFRA</span><span lang="en">List of products prohibited for use by IFRA</span></caption> 
-  <tr>
-    <th>Ingredient</th>
-    <th>N° CAS</th>
-    <th>Spécifications</th>
-  </tr>
-  <tr>
-    <td width="35%">Acetyl ethyl tetramethyl tetralin (AETT, Versalide)</td>
-    <td width="15%">88&#8209;29&#8209;9</td>
-    <td width="50%"></td>
-  </tr>
-  <tr>
-     <td>Acetyl isovaleryl (5-Methyl-2,3-hexanedione)</td>
-     <td>13706&#8209;86&#8209;0</td>
-     <td></td> 
-  </tr>
+        <tr>
+          <th>Ingredient</th>
+          <th>N° CAS</th>
+          <th>Spécifications</th>
+        </tr>
+        <tr>
+          <td width="35%">Acetyl ethyl tetramethyl tetralin (AETT, Versalide)</td>
+          <td width="15%">88&#8209;29&#8209;9</td>
+          <td width="50%"></td>
+        </tr>
+        <tr>
+           <td>Acetyl isovaleryl (5-Methyl-2,3-hexanedione)</td>
+           <td>13706&#8209;86&#8209;0</td>
+           <td></td> 
+        </tr>
         <tr>
             <td>Alantroot oil (Elecampane oil)</td>
             <td>97676&#8209;35&#8209;2</td>
@@ -1504,8 +1504,7 @@ crossorigin=""/>
         <tr>
             <td>Cade oil - Juniperus oxycedrus L. (Crude)</td>
             <td>8013-10-3<br>90046-02-9</td>
-            <td>The rectified (purified) cade oils can be used insofar the below requirement is respected:<br>
-Limit content of polynuclear aromatic hydrocarbons (PAH) resulting from the use of rectified oils according to Good Manufacturing Practice.<br>Benzopyrene and 1,2-Benzanthracene are to be used as markers for PAH. If used alone or in combination with rectified Birch tar oils, rectified Opoponax oil or rectified Styrax oil, the total concentration of both of the markers should not exceed 1 ppb in the final product.</td> 
+            <td>The rectified (purified) cade oils can be used insofar the below requirement is respected:<br>Limit content of polynuclear aromatic hydrocarbons (PAH) resulting from the use of rectified oils according to Good Manufacturing Practice.<br>Benzopyrene and 1,2-Benzanthracene are to be used as markers for PAH. If used alone or in combination with rectified Birch tar oils, rectified Opoponax oil or rectified Styrax oil, the total concentration of both of the markers should not exceed 1 ppb in the final product.</td> 
         </tr>
         <tr>
             <td>Carvone oxide</td>
@@ -1699,8 +1698,7 @@ Limit content of polynuclear aromatic hydrocarbons (PAH) resulting from the use 
         <tr>
             <td>7-Methoxycoumarin</td>
             <td>531-59-9</td>
-            <td>The material as such should not be used as a fragrance ingredient for any application.On the basis of established maximum levels of this substance in commercially available natural sources (like essential oils, extracts and absolutes), exposure to this substance from the use of these oils and extracts is regarded acceptable as long as the level of 7-methoxycoumarin in the finished product does not exceed 100ppm.
-</td> 
+            <td>The material as such should not be used as a fragrance ingredient for any application.On the basis of established maximum levels of this substance in commercially available natural sources (like essential oils, extracts and absolutes), exposure to this substance from the use of these oils and extracts is regarded acceptable as long as the level of 7-methoxycoumarin in the finished product does not exceed 100ppm.</td> 
         </tr>
         <tr>
             <td>alpha-Methyl anisylidene acetone (1-(4-Methoxyphenyl)-1-penten-3-one)</td>
@@ -1828,7 +1826,7 @@ Limit content of polynuclear aromatic hydrocarbons (PAH) resulting from the use 
         </tr>
 </table>
 </div>
-</div>
+
 </div>
 
 <div class="modal-footer">
