--- a/html/_/pre_index.html
+++ b/html/_/pre_index.html
@@ -1352,7 +1352,7 @@ crossorigin=""/>
   <br>
   <p>Afin de vous fournir de plus amples informations sur la <b>classification des produits finis dans les catégories </b>ici, nous avons réunis les principaux produits dans ce tableau : </p>
 
-<div class="table-responsive-sm table-striped col-12">
+<div class="table-responsive-sm col-12">
   <table class="col-12 align-items-center" >
    <caption class="caption"><span lang="fr">Liste des produits finis regroupés par catégories</span><span lang="en">List of finished products grouped by category</span></caption> 
    <thead>
@@ -1411,7 +1411,7 @@ crossorigin=""/>
     <p class="mt-5" lang="fr">Une partie du travail de l’association est également d’interdire l’utilisation d’ingrédients dangereux pour le consommateur. Ne pouvant donc pas les insérer dans notre classification, nous vous présentons la liste de ces substances ci-dessous : </p>
     <p class="mt-5" lang="en">Part of the association's work is also to ban the use of ingredients that are dangerous for the consumer. Therefore, since they cannot be included in our classification, we present the list of these substances below:</p>
 
-<div class="table-responsive-sm table-striped col-12">
+<div class="table-responsive-sm col-12">
   <table class="col-12 align-items-center" style="width:100%">
     <caption class="caption"><span lang="fr">Liste des produits interdits d'utilisation par l'IFRA</span><span lang="en">List of products prohibited for use by IFRA</span></caption> 
       <thead>
