tranfered the 'sources' modal into 'sources.html' page

--- a/html/_/pre_index.html
+++ b/html/_/pre_index.html
@@ -50,7 +50,7 @@ crossorigin=""/>
     <!--<button class="dropdown-item btn" type="button" data-toggle="modal" data-target="#lesNouveautes">Les nouveautés</button>-->
     <button class="dropdown-item btn" type="button" data-toggle="modal" data-target="#lesCollaborateurs"><span lang="fr">Ils nous soutiennent</span><span lang="en">They support us</span></button>
     <button class="dropdown-item btn" type="button" data-toggle="modal" data-target="#lesContacts"><span lang="fr">Contacts</span><span lang="en">Contacts</span></button>
-    <button class="dropdown-item btn" type="button" data-toggle="modal" data-target="#lesSources"><span lang="fr">Sources</span><span lang="en">Sources</span></button>
+    <a class="dropdown-item btn  save_map_status_on_leaving" role="button"  href="sources.html"><span lang="fr">Sources</span><span lang="en">Sources</span></a>
     <div class="btn-group btn-group-toggle" data-toggle="buttons">
       <label class="btn btn-primary to_french_radio_input"><input type="radio" name="options" id="option1" autocomplete="off" checked />FR</label>
       <label class="btn btn-primary to_english_radio_input"><input type="radio" name="options" id="option2" autocomplete="off" checked />EN</label>
@@ -106,9 +106,9 @@ crossorigin=""/>
 <div class="container-fluid  text-center">
 <div class="row">
 <div class="col-12 col-md-6 p-0">
-  <button class="btn btn-sm  text-underline" type="button" data-toggle="modal" data-target="#lesSources">
+  <a class="btn btn-sm  text-underline save_map_status_on_leaving" role="button" href="sources.html">
     <span lang="fr">Sources</span><span lang="en">Sources</span>
-  </button>
+  </a>
 </div>
 <div class="col-12 col-md-6 p-0">
   <button class="btn btn-sm  text-underline" type="button" data-toggle="modal" data-target="#lesContacts">
@@ -279,83 +279,7 @@ crossorigin=""/>
 
 
 <!--MODAL SOURCE--> 
-
-<div class="modal" tabindex="-1" role="dialog" id="lesSources">
-<div class="modal-dialog modal-xl" role="document">
-<div class="modal-content">
-  
-<div class="modal-header d-block">
-  <button type="button" class="close float-right" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-  <h4 class="text-center  modal-title modal-title1">Sources</h4>
-</div>
-
-<div class="modal-body text-size-14px text-justify scrollbar-inside2">
-  
-<div class="source">
-  <p lang="fr">Afin de donner naissance à la classification <i>ScenTree</i> il a été nécessaire d'approfondir nos connaissances en parfumerie en utilisant de nombreux ouvrages traitant des matières premières. La liste ci-dessous constitue la bibligraphie du projet : </p>
-  <p lang="en">To create <i>ScenTree</i> classification, it has been necessary to deepen our perfumery knowledge by using diverse works about raw materials. The following list is the project bibliography: </p>
-
-<div class="col-12" style="height: 20px;"></div>
-
-  <p><b><span lang="fr">Ouvrages : </span><span lang="en">Books : </span></b>
-  <uL>      
-    <li>Horst Surburg, Johannes Panten, “Common Fragrance and Flavor Materials”, 5th edition, completely revised and enlarged edition 2006. 325 pages. ISBN: 3-527-31315-X.</li>
-    <li>Nez Edition, “Nez, la revue olfactive”, #1, #2, #3, #4, #5, #6, #7, #8, 2016-2019.</li>
-    <li>Michael and Irene Ash, Synapse Information Resources, Inc., “Handbook of Flavors and Fragrances”, 2006, 1790 pages. ISBN: 1-934764-28-0</li>
-    <li>Charles Sell Quest International, Ashford, Kent, “The Chemistry of Fragrances, From Perfumer to Consumer 2nd Edition”, 2006, 348 pages. ISBN-10: 0-85404-824-3</li>
-    <li>David H. Pybus, Charles Sell, Sales and Promotion Department, The Royal Society of Chemistry, “The Chemistry of Fragrances”, 1999, 297 pages. ISBN 0-85404-528-7</li>
-    <li>Günther Ohloff, Wilhelm Pickenhagen, Philip Kraft, NHCA, Verlag Helvetica Chimica Acta, Zürich (Switzerland), “Scent and Chemistry, The Molecular World of Odors”, 2012, 418 pages. ISBN-10: 3906390667</li>
-    <li>K.V. Peter. WP Woodhead Publishing. "Handbook of herbs and spices - Volume 1". 2nd Edition, 2012. 634 pages. ISBN 978-0-85709-039-3</li>
-    <li>K.V. Peter. WP Woodhead Publishing. "Handbook of herbs and spices - Volume 2". 2nd Edition, 2012. 634 pages. ISBN 978-0-85709-040-9</li>
-    <li>P.Franchomme, R.Jollois, D.Péonël. Editions Roger Jollois. "L'aromathérapie exactement" 2001. 510 pages. ISBN: 2-87819-001-7</li>
-    <li>P. Franchomme. Edition TREDANIEL LA MAISNIE. "La science des huiles essentielles médicinales." 2015. 580 pages. ISBN : 978-2813207630 </li>
-    <li>A.O. Tucker, T. Debaggio. Edited by Francesco DeBaggio. "The encyclopedia of herbs - a comprehensive reference to herbs of flavor and fragrance" 2009. 605 pages. ISBN-13: 978-0-88192-994-2 </li>
-    <li>Sue Clarke, Elseiver Limited, “Essential Chemistry for Aromatherapy”, First Edition 2002, 302 pages. ISBN : 978-0-4431-0403-9</li>
-    <li>“A list of cultivated plants yielding aroma substances”, 4 pages.</li>
-    <li>Nawal Saïchi, Philippe Durand, Institut Klorane, Edititons Pierre Fabre, “Guide des conifères et espèces apparentées”, 2009, 67 pages. Code 458 125</li>
-    <li>Asja Sarkic, Iris Stappen, Department of Pharmaceutical Chemistry, University of Vienna, “Essential Oils ans Their Single Compounds in Cosmetics”, 2018, 21 pages.</li>
-    <li>United Nations Industrial Development Organization, K. Tuley De Silva, “A Manual on The Essential Oil Industry”, 1995, 231 pages, ISBN : 978-9-2110-6437-7</li>
-    <li>American Herbal Products Association, Zoë Gardner, Michael Mc Guffin, “Botanical Safety Handbook”, Second Edition, 2013, 1029 pages. ISBN : 978-1-4665-1695-3</li>
-    <li>Dr Robert P. Adams, Baylor University, “Identification Of Essential Oil Components By Gas Chromatography Mass Spectrometry”, Edition 4.1, 2017, 809 pages. ISBN : 978-1-932633-21-4</li>
-    <li>Charles S. Sell, Wiley Edition, “Chemistry and Sense of Smell”, 2014, 471 pages. ISBN : 978-0-470-55130-1</li>
-    <li>Ernst T. Theimer, Academic Press Inc. (London), “Fragrance Chemistry The Science of the Sense of Smell”, United Kingdom Edition, 1982, 631 pages. ISBN : 978-1-2993-6448-6</li>
-  </uL>
-  </p>
-  <p><b><span lang="fr">Sites internets :</span><span lang="en">Websites : </span></b>
-  <ul>
-    <li><a href="https://www.perfumerflavorist.com/" target ="_BLANK"> https://www.perfumerflavorist.com </a></li>
-    <li><a href="https://www.sigmaaldrich.com" target ="_BLANK"> https://www.sigmaaldrich.com </a></li>
-    <li><a href="https://www.thegoodscentscompany.com" target ="_BLANK"> https://www.thegoodscentscompany.com </a></li>
-    <li><a href="https://www.givaudan.com" target ="_BLANK"> https://www.givaudan.com </a></li>
-    <li><a href="https://www.firmenich.com" target ="_BLANK"> https://www.firmenich.com </a></li>
-    <li><a href="https://www.iff.com" target ="_BLANK"> https://www.iff.com </a></li>
-    <li><a href="https://www.mane.com" target ="_BLANK"> https://www.mane.com </a></li>
-    <li><a href="https://www.albertvieille.com" target ="_BLANK"> https://www.albertvieille.com </a></li>
-    <li><a href="https://www.fragrantica.com/notes/" target ="_BLANK"> https://www.fragrantica.com/</a></li>
-    <li><a href="https://commons.wikimedia.org/" target ="_BLANK"> https://commons.wikimedia.org/</a></li>
-    <li><a href="http://ultranl.com/market/" target ="_BLANK"> http://ultranl.com/market/</a></li>
-  </ul>
-  </p>
-  <p><b><span lang="fr">Fiches de données de sécurité :</span><span lang="en">Safety data sheets : </span></b>
-
-  <span lang="fr">L'ensemble des données techniques présentées dans <i>ScenTree</i> sont issues de FDS provenant des sociétés majeures de l'industrie de la parfumerie.</span><span lang="en">The whole technical data given by <i>ScenTree</i> was sourced from SDS coming for major companies of the perfumery area.</p>
-  
-  <p lang="fr"><b>Autres sources d'informations :</b></p>
-  <p lang="en"><b>Other sources of information :</b></p>
-
-  <p lang="fr">Une partie des données présentées dans cette classification ne sont pas sourcées. Elles proviennent en effet de la collaboration avec plusieurs professionnels du monde de la parfumerie, comme le veux notre protocole de classification des matières premières.</p>
-  <p lang="en">Part of the data provided by this classification is not sourced. It comes from our collaboration with a few olfaction and perfumery experts, as our raw materials classification protocol wishes to.</p>
-
-  <p lang="fr">Pour toute interrogation sur nos sources, se référer à la rubrique « Contacts ».</p>
-  <p lang="en">For any request concerning our sources, please refer to the “contacts” heading.</p>
-  
-</div>
-
-</div>
-
-</div>
-</div>
-</div>
+<!-- transfered to sources.html -->
 
 
 <!--MODAL ILS NOUS SOUTIENNENT ex-COLLABORATEURS ex-CREDITS -->  
