moved some modal from pre_index.html to standalone webpages

--- a/html/_/sources.html
+++ b/html/_/sources.html
@@ -33,7 +33,7 @@ crossorigin=""/>
 <main class="h-100">
 
 
-<div class="modal fade in  my-modal" tabindex="-1" role="dialog" id="lesSources">
+<div class="modal fade in  my-modal show_modal_at_start go_to_main_page_after_closing_modal" tabindex="-1" role="dialog" id="lesSources">
 <div class="modal-dialog modal-xl" role="document">
 <div class="modal-content">
 
