--- a/html/_/pre_index.html
+++ b/html/_/pre_index.html
@@ -33,7 +33,7 @@ crossorigin=""/>
 <header class="d-md-none">
 <!-- fixed navbar -->
 <nav class="navbar  fixed-top  fillright">
-  <button class="btn  mr-auto" type="button" data-toggle="modal" data-target="#decouvrirScenTree"><img id="logo-image-sm" class="img-fluid  logomenu boutonclickable" src="../img/logon.png" alt="le logo de Scentree"></button>
+  <a class="btn  mr-auto  save_map_status_on_leaving" role="button" href="scentree.html"><img id="logo-image-sm" class="img-fluid  logomenu boutonclickable" src="../img/logon.png" alt="le logo de Scentree"></a>
 <div class="dropdown">
   <button class="btn dropdown-toggle" type="button" id="dropdownSarchButton-sm" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
     <img src="../img/search1.png" class="max-height-30px" alt="Rechercher …" />
@@ -48,9 +48,9 @@ crossorigin=""/>
   </button>
   <div class="dropdown-menu dropdown-menu-right  text-center" aria-labelledby="dropdownMenuButton-sm">
     <!--<button class="dropdown-item btn" type="button" data-toggle="modal" data-target="#lesNouveautes">Les nouveautés</button>-->
-    <button class="dropdown-item btn" type="button" data-toggle="modal" data-target="#lesCollaborateurs"><span lang="fr">Ils nous soutiennent</span><span lang="en">They support us</span></button>
-    <button class="dropdown-item btn" type="button" data-toggle="modal" data-target="#lesContacts"><span lang="fr">Contacts</span><span lang="en">Contacts</span></button>
-    <a class="dropdown-item btn  save_map_status_on_leaving" role="button"  href="sources.html"><span lang="fr">Sources</span><span lang="en">Sources</span></a>
+    <a class="dropdown-item btn  save_map_status_on_leaving" role="button" href="supporters.html"><span lang="fr">Ils nous soutiennent</span><span lang="en">They support us</span></a>
+    <a class="dropdown-item btn  save_map_status_on_leaving" role="button" href="contacts.html"><span lang="fr">Contacts</span><span lang="en">Contacts</span></a>
+    <a class="dropdown-item btn  save_map_status_on_leaving" role="button" href="sources.html"><span lang="fr">Sources</span><span lang="en">Sources</span></a>
     <div class="btn-group btn-group-toggle" data-toggle="buttons">
       <label class="btn btn-primary to_french_radio_input"><input type="radio" name="options" id="option1" autocomplete="off" checked />FR</label>
       <label class="btn btn-primary to_english_radio_input"><input type="radio" name="options" id="option2" autocomplete="off" checked />EN</label>
@@ -80,7 +80,7 @@ crossorigin=""/>
     <button class="btn text-in-color-brown float-right px-0">/</button>
     <button class="btn to_french_button text-in-color-brown float-right" type="button">FR</button>
   </div>
-  <button class="btn" type="button" data-toggle="modal" data-target="#decouvrirScenTree"><img id="logo-image" class="img-fluid logomenu boutonclickable" src="../img/logon.png" alt="le logo de Scentree"></button>
+  <a class="btn  save_map_status_on_leaving" role="button" href="scentree.html"><img id="logo-image" class="img-fluid logomenu boutonclickable" src="../img/logon.png" alt="le logo de Scentree"></a>
 </div>
 
 <div class="row h-25 align-items-start">
@@ -99,7 +99,7 @@ crossorigin=""/>
 <div class="row h-25 align-items-center  text-center">
   <div class="col">
 <!--<div class="col-12"><button class="btn btn text-underline" type="button" data-toggle="modal" data-target="#lesNouveautes">Découvrez les nouveautés !</button></div>-->
-  <button class="btn  text-underline font-weight-bold  mt-5 mb-5 px-0  text-in-color-brown text-in-size-16px" type="button" data-toggle="modal" data-target="#lesCollaborateurs"><span lang="fr">Ils nous soutiennent</span><span lang="en">They support us</span></button>
+  <a class="btn  text-underline font-weight-bold  mt-5 mb-5 px-0  text-in-color-brown text-in-size-16px  save_map_status_on_leaving" role="button" href="supporters.html"><span lang="fr">Ils nous soutiennent</span><span lang="en">They support us</span></a>
 </div>
 </div>
 <div class="row h-25 align-items-end">
@@ -111,9 +111,9 @@ crossorigin=""/>
   </a>
 </div>
 <div class="col-12 col-md-6 p-0">
-  <button class="btn btn-sm  text-underline" type="button" data-toggle="modal" data-target="#lesContacts">
+  <a class="btn btn-sm  text-underline  save_map_status_on_leaving" role="button" href="contacts.html">
   <span lang="fr">Contacts</span><span lang="en">Contacts</span>
-  </button>
+  </a>
 </div>
 <div class="col-12 col-md-6 p-0">
   <button class="btn btn-sm  text-underline" type="button" data-toggle="modal" data-target="#lesMentionsLegales">
