--- a/html/_/supporters.html
+++ b/html/_/supporters.html
@@ -61,7 +61,7 @@ crossorigin=""/>
 <div class="col-12" style="height: 10px;"></div>
 
 <div class="row col-12">
-  <button class="btn col-6" type="button" data-toggle="modal" data-target="#partenaireCinquiemeSens"><img class="img-fluid  boutonclickable  min-height-80px max-height-100px" src="../img/sponsors/Logo-Vecto-5S-20x20.png" alt="le logo de Cinquième Sens"></button>
+  <a class="btn col-6" role="button" href="../supporters/cinquieme_sens.html"><img class="img-fluid  boutonclickable  min-height-80px max-height-100px" src="../img/sponsors/Logo-Vecto-5S-20x20.png" alt="le logo de Cinquième Sens"></a>
 </div>
       </div>
 
