added a dedicated page for the video modal

--- a/html/_/supporters.html
+++ b/html/_/supporters.html
@@ -97,8 +97,8 @@ crossorigin=""/>
     <li>VASKOU Marie</li>
   </uL>
 
-  <p lang="fr"><b><i class="text-underline">Graphismes, visuels et <a href="#Vidéo" data-toggle="modal" data-dismiss="modal">vidéo </a></i></b> </p>
-  <p lang="en"><b><i class="text-underline">Graphism, visuals and <a href="#Vidéo" data-toggle="modal" data-dismiss="modal">video </a></i></b> </p>
+  <p lang="fr"><b><i class="text-underline">Graphismes, visuels et <a href="video.html">vidéo </a></i></b> </p>
+  <p lang="en"><b><i class="text-underline">Graphism, visuals and <a href="video.html">video </a></i></b> </p>
   <uL>
     <li>ERCOLANELLI Clara (Logo)</li>
     <li>SHOGUN SHOOTER (Vidéo)</li>
