--- a/html/_/pre_index.html
+++ b/html/_/pre_index.html
@@ -53,8 +53,8 @@ crossorigin=""/>
     <button class="dropdown-item btn" type="button" data-toggle="modal" data-target="#lesSources"><span lang="fr">Sources</span><span lang="en">Sources</span></button>
 
     <div class="btn-group btn-group-toggle" data-toggle="buttons">
-      <label class="btn btn-primary to_french_radio_input"><input type="radio" name="options" id="option1" autocomplete="off" checked />FR</label>
-      <label class="btn btn-primary to_english_radio_input"><input type="radio" name="options" id="option2" autocomplete="off" checked />EN</label>
+      <label class="btn btn-primary to_french_radio_input"><input type="radio" name="options" id="option1" autocomplete="off" checked /><img src="../img/france.png" alt="ScenTree en français"  class="imgfr"></label>
+      <label class="btn btn-primary to_english_radio_input"><input type="radio" name="options" id="option2" autocomplete="off" checked /><img src="../img/anglais.png" alt="ScenTree in english" class="imgen"></label>
     </div>
 
     <button class="dropdown-item btn" type="button" data-toggle="modal" data-target="#lesMentionsLegales"><span lang="fr">Mentions Légales</span><span lang="en">Legal Mentions</span></button>
@@ -1780,7 +1780,8 @@ crossorigin=""/>
           </tr>
           <tr>
               <td>Phenyl benzoate</td>
-              <td>93-99-2</td>
+              <td>93-99-2</td> 
+              <td></td> 
           </tr>
           <tr>
               <td>Pseudoionone (2,6-Dimethylundeca-2,6,8-trien-10-one)</td>
