--- a/html/_/pre_index.html
+++ b/html/_/pre_index.html
@@ -624,8 +624,8 @@ crossorigin=""/>
 <div class="row">
 <div class="col-xs-12 col-sm-12 col-lg-4  panelcontent" >
   
-  <h2 class="item d-inline text-size-16px" style="background-color: blue;"><span><b lang="fr">Tenue <sup class="fas fa-question-circle iconetab" title="Indice sur la ténacité de la matière première (Tête : quelques minutes; Coeur : quelques heures; Fond : jusqu'à plusieurs jours)."></sup> :</b><b lang="en">Volatility <sup class="fas fa-question-circle iconetab" title="Indication of the tenacity of the raw material (Head : a few minutes; Heart : a few hours; Base : sometimes a few days)."></sup> :</b></h2>
-  <span id="modalbody-tenue" class="textitem" ></span></span>
+  <h2 class="item d-inline text-size-16px"><span><b lang="fr">Tenue <sup class="fas fa-question-circle iconetab" title="Indice sur la ténacité de la matière première (Tête : quelques minutes; Coeur : quelques heures; Fond : jusqu'à plusieurs jours)."></sup> :</b><b lang="en">Volatility <sup class="fas fa-question-circle iconetab" title="Indication of the tenacity of the raw material (Head : a few minutes; Heart : a few hours; Base : sometimes a few days)."></sup> :</b></h2>
+  <span id="modalbody-tenue" class="textitem" style="background-color: blue;"></span></span>
 
   <br class="brmodalMP">
   <h2 class="item d-inline text-size-16px"><span><b lang="fr">Prix <sup class="fas fa-question-circle iconetab" title="€ : 0 à 15 €/kg; €€ : 15 à 50 €/kg; €€€ : 50 à 200 €/kg; €€€€ : 200 à 1000 €/kg; €€€€€ : 1000 €/kg et plus. Le prix des matières premières peut grandement évoluer selon différents facteurs qui leurs sont propres."></sup> : </b><b lang="en"> Price <sup class="fas fa-question-circle iconetab" title="€ : 0 to 15 €/kg ; €€ : 15 to 50 €/kg; €€€ : 50 to 200 €/kg; €€€€ : 200 to 1000 €/kg; €€€€€ : 1000 €/kg and more. 1 € ≈ 1,1 USD. Raw materials cost can evolve according to various factors of their own."></sup> : </b></h2>
